actualización de  links a proyectos ya publicados

--- a/index.html
+++ b/index.html
@@ -261,6 +261,8 @@
                                 class="btn btn-outline-light" target="_blank">Ver Mas</a>
                             <a href="https://github.com/FranciscoNunezAlonso/ProyectoIntegradorFrontEnd.git"
                                 class="btn btn-outline-light" target="_blank">Ver código</a>
+                                 <a href="https://francisconunezalonso.github.io/ProyectoIntegradorFrontEnd/"
+                                class="btn btn-outline-light" target="_blank">Link</a>
                         </div>
                     </div>
                 </div>
@@ -272,6 +274,8 @@
                                 target="_blank">Ver Mas</a>
                             <a href="https://github.com/DanHT22/primerPaginaWeb.git" class="btn btn-outline-light"
                                 target="_blank">Ver código</a>
+                             <a href="https://danht22.github.io/Blog-Salud-Mental-Perros/"
+                                class="btn btn-outline-light" target="_blank">Link</a>
                         </div>
                     </div>
                 </div>
@@ -303,8 +307,10 @@
                         <div class="content">
                             <a href="./src/img/proyectoDbeuty.png" data-fancybox="gallery" class="btn btn-outline-light"
                                 target="_blank">Ver Mas</a>
-                            <a href="https://github.com/DanHT22/appWeb.Eq6.git" class="btn btn-outline-light"
+                            <a href="https://github.com/DanielaSanchez130571/Tabla_periodica_HTML" class="btn btn-outline-light"
                                 target="_blank">Ver código</a>
+                                <a href="https://tabla-elementos-html.netlify.app/app" class="btn btn-outline-light"
+                                target="_blank">Link</a>
                         </div>
                     </div>
                 </div>
