ajuste de links

--- a/index.html
+++ b/index.html
@@ -296,9 +296,13 @@
                         <div class="content">
                             <a href="./src/img/proyectoTablaHTML.png" data-fancybox="gallery"
                                 class="btn btn-outline-light" target="_blank">Ver Mas</a>
-                            <a href="https://github.com/DanHT22/Tabla_Elementos_HTLM.git" class="btn btn-outline-light"
+                                <a href="https://github.com/DanielaSanchez130571/Tabla_periodica_HTML" class="btn btn-outline-light"
                                 target="_blank">Ver código</a>
+                                <a href="https://tabla-elementos-html.netlify.app/app" class="btn btn-outline-light"
+                                target="_blank">Link</a>
+                                
                         </div>
+                     
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6" data-aos="fade-up" data-aos-delay="200">
@@ -307,10 +311,6 @@
                         <div class="content">
                             <a href="./src/img/proyectoDbeuty.png" data-fancybox="gallery" class="btn btn-outline-light"
                                 target="_blank">Ver Mas</a>
-                            <a href="https://github.com/DanielaSanchez130571/Tabla_periodica_HTML" class="btn btn-outline-light"
-                                target="_blank">Ver código</a>
-                                <a href="https://tabla-elementos-html.netlify.app/app" class="btn btn-outline-light"
-                                target="_blank">Link</a>
                         </div>
                     </div>
                 </div>
@@ -411,6 +411,8 @@
     <script src="./src/js/downloadCV.js"></script>
     <!-- sweet alert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Smp -->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
 
 
 </body>
