ajuste link proyecto tabla

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                                 class="btn btn-outline-light" target="_blank">Ver Mas</a>
                                 <a href="https://github.com/DanielaSanchez130571/Tabla_periodica_HTML" class="btn btn-outline-light"
                                 target="_blank">Ver código</a>
-                                <a href="https://tabla-elementos-html.netlify.app/app" class="btn btn-outline-light"
+                                <a href="https://tabla-elementos-html.netlify.app" class="btn btn-outline-light"
                                 target="_blank">Link</a>
                                 
                         </div>
